docs-archive/apache-airflow-providers-slack/7.3.0/_sources/_api/airflow/providers/slack/notifications/slack/index.rst.txt
:py:mod:`airflow.providers.slack.notifications.slack`
=====================================================

.. py:module:: airflow.providers.slack.notifications.slack


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.slack.notifications.slack.SlackNotifier




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.slack.notifications.slack.ICON_URL
   airflow.providers.slack.notifications.slack.send_slack_notification


.. py:data:: ICON_URL
   :type: str
   :value: 'https://raw.githubusercontent.com/apache/airflow/2.5.0/airflow/www/static/pin_100.png'

   

.. py:class:: SlackNotifier(*, slack_conn_id = 'slack_api_default', text = 'This is a default message', channel = '#general', username = 'Airflow', icon_url = ICON_URL, attachments = (), blocks = ())

   Bases: :py:obj:`airflow.notifications.basenotifier.BaseNotifier`

   Slack BaseNotifier

   :param slack_conn_id: Slack API token (https://api.slack.com/web).
   :param text: The content of the message
   :param channel: The channel to send the message to. Optional
   :param username: The username to send the message as. Optional
   :param icon_url: The icon to use for the message. Optional
   :param attachments: A list of attachments to send with the message. Optional
   :param blocks: A list of blocks to send with the message. Optional

   .. py:attribute:: template_fields
      :value: ('text', 'channel', 'username', 'attachments', 'blocks')

      

   .. py:method:: hook()

      Slack Hook.


   .. py:method:: notify(context)

      Send a message to a Slack Channel



.. py:data:: send_slack_notification

   

